--- a/css/style.css
+++ b/css/style.css
@@ -55,13 +55,13 @@ a {
 
 .hero {
   position: relative;
-  background: url('img/camiones2.png') center/cover no-repeat;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   color: white;
   text-align: center;
+  overflow: hidden;
 }
 
 .hero::before {
@@ -70,18 +70,14 @@ a {
   top: 0; left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5); /* transparent dark overlay */
-  z-index: 1;
-}
-
-.hero .content {
-  position: relative;
-  z-index: 2;
+  background: url('img/camiones2.png') center/cover no-repeat;
+  filter: brightness(60%); /* darken image */
+  z-index: 0;
 }
 
 .hero h1 {
   position: relative;
-  z-index: 1;
+  z-index: 1; /* ensure text is on top of image */
   font-size: 3rem;
 }
 
