--- a/css/style.css
+++ b/css/style.css
@@ -54,13 +54,34 @@ a {
 
 .hero {
   position: relative;
-  background: url('img/camiones2.png') center/cover no-repeat;
+  background: url('img/../camiones2.png') center/cover no-repeat;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   color: white;
   text-align: center;
+}
+
+.hero::before {
+  content: "";
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5); /* transparent dark overlay */
+  z-index: 1;
+}
+
+.hero .content {
+  position: relative;
+  z-index: 2;
+}
+
+.hero h1 {
+  position: relative;
+  z-index: 1;
+  font-size: 3rem;
 }
 
 .sobre-nosotros {
