--- a/css/style.css
+++ b/css/style.css
@@ -54,13 +54,28 @@ a {
 
 .hero {
   position: relative;
-  background: url('../img/flotillaveyh.png') center/cover no-repeat;
   height: 100vh;
+  overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
   color: white;
   text-align: center;
+}
+
+.hero-image {
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 0;
+}
+
+.hero h1 {
+  position: relative;
+  z-index: 1;
+  font-size: 3rem;
 }
 
 .sobre-nosotros {
