--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,10 @@ a {
   position: relative;
 }
 
+li {
+  margin-bottom: 0.5rem;
+}
+
 .nav a:hover::after {
   content: '';
   position: absolute;
@@ -75,7 +79,8 @@ a {
 .hero h1 {
   position: relative;
   z-index: 1;
-  font-size: 3rem;
+  font-size: 4rem;
+  font-style: italic;
 }
 
 .sobre-nosotros {
@@ -88,10 +93,13 @@ a {
 .sobre-nosotros h2 {
   color: #00aaff; /* light blue */
   margin-bottom: 1rem;
+  font-size: 3rem;
 }
 
 .sobre-nosotros p {
   color: #666; /* gray text */
+  font-size: 2rem;
+  margin-bottom: 1rem; /* adds space below each paragraph */
 }
 
 .servicios {
@@ -99,10 +107,18 @@ a {
   margin-bottom: 1rem;
   scroll-margin-top: 80px; /* adjust based on your navbar height */
   padding: 4rem 2rem; /* 👈 Add this */
+  font-size: 3rem;
 }
 
 .servicios p {
   color: #666; /* gray text */
+  font-size: 2rem;
+  margin-bottom: 1rem; /* adds space below each paragraph */
+}
+
+.servicios li {
+  color: #666; /* gray text */
+  font-size: 2rem;
 }
 
 .gray-bg {
@@ -136,6 +152,10 @@ a {
   width: 50%;
 }
 
+.servicios.white-bg .servicio-container {
+  gap: 0;
+}
+
 .images-row {
   display: flex;
   justify-content: center;
@@ -146,10 +166,13 @@ a {
 .images-row h2 {
   color: #00aaff; /* light blue */
   margin-bottom: 1rem;
+  font-size: 3rem;
 }
 
 .images-row p {
   color: #666; /* gray text */
+  font-size: 2rem;
+  margin-bottom: 1rem; /* adds space below each paragraph */
 }
 
 .images-row img {
