margins and images corrections

--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@ li {
 .servicios {
   color: #00aaff; /* light blue */
   margin-bottom: 1rem;
-  scroll-margin-top: 80px; /* adjust based on your navbar height */
+  scroll-margin-top: 140px; /* adjust based on your navbar height */
   padding: 4rem 2rem; /* 👈 Add this */
 }
 
@@ -123,6 +123,7 @@ li {
 .servicios li {
   color: #666; /* gray text */
   font-size: 2rem;
+  padding-left: 1rem;
 }
 
 .gray-bg {
@@ -157,8 +158,7 @@ li {
 }
 
 .servicios.white-bg .servicio-container img {
-  margin: 0;
-  padding: 0;
+  margin-left: -1rem;
 }
 
 .images-row {
