--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@ li {
 .servicios li {
   color: #666; /* gray text */
   font-size: 2rem;
-  padding-left: 1rem;
+  margin-left: 1rem;
 }
 
 .gray-bg {
@@ -158,7 +158,11 @@ li {
 }
 
 .servicios.white-bg .servicio-container img {
-  margin-left: -1rem;
+  margin-left: -2rem;
+}
+
+.servicios.gray-bg .servicio-container p {
+  margin-bottom: 2rem;
 }
 
 .images-row {
@@ -184,6 +188,11 @@ li {
   width: 30%;
   height: 200px; 
   object-fit: cover;
+}
+
+.image-item {
+  font-style: bold;
+  color:black
 }
 
 .servicios.white-bg.center-images {
