--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@ li {
 .servicios {
   color: #00aaff; /* light blue */
   margin-bottom: 1rem;
-  scroll-margin-top: 140px; /* adjust based on your navbar height */
+  scroll-margin-top: 30px; /* adjust based on your navbar height */
   padding: 4rem 2rem; /* 👈 Add this */
 }
 
@@ -185,14 +185,19 @@ li {
 }
 
 .images-row img {
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+}
+.image-item {
   width: 30%;
-  height: 200px; 
-  object-fit: cover;
 }
 
-.image-item {
-  font-style: bold;
-  color:black
+.image-title {
+  color: black;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 0.5rem;
 }
 
 .servicios.white-bg.center-images {
